--- a/SmartTech index.html
+++ b/SmartTech index.html
@@ -57,7 +57,7 @@
         <figcaption>Sony Smart TV</figcaption>
       </figure><br>
 
-      <h4><a href="http://127.0.0.1:5500/Smartwatch%20index.html" target="_blank">Read about
+      <h4><a href="https://github.com/BAKSHMSM/Smart/blob/main/Smartwatch%20index.html" target="_blank">Read about
           Smartwatch</a></h4>
     </Main><br>
     <!--Adding a Footer-->
