--- a/Smartwatch index.html
+++ b/Smartwatch index.html
@@ -19,7 +19,7 @@
    
         <a href="https://images.pexels.com/photos/11617966/pexels-photo-11617966.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" target="_blank"> <figure> <img src="https://images.pexels.com/photos/11617966/pexels-photo-11617966.jpeg" alt="Sony Smart TV" width="450"><figcaption>Smartwatch</figcaption></figure></a>
 
-         <h4><a href="https://github.com/BAKSHMSM/Smart/blob/9099f9c98cf2eaac6d51439f36146e0b024fb40e/SmartTech%20index.html" target="_blank">Read about Smart TVs</a></h4>
+         <h4><a href="http://127.0.0.1:5500/SmartTech%20index.html" target="_blank">Read about Smart TVs</a></h4>
         </Main><br><!--Adding a Footer--><footer>TradeMark&copy;</footer>
     
 </body>
