--- a/SmartTech index.html
+++ b/SmartTech index.html
@@ -57,7 +57,7 @@
         <figcaption>Sony Smart TV</figcaption>
       </figure><br>
 
-      <h4><a href="https://github.com/BAKSHMSM/Smart/blob/4909dbba229084179b29ca6f1038b1a5d64e6d1a/Smartwatch%20index.html" target="_blank">Read about
+      <h4><a href="https://bakshmsm.github.io/Smart/Smartwatch%20index.html" target="_blank">Read about
           Smartwatch</a></h4>
     </Main><br>
     <!--Adding a Footer-->
